ignore datasets folder

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,8 @@ ipython_config.py
 .history
 .ionide
 
+### Datasets ###
+.dataset/*
 # End of https://www.toptal.com/developers/gitignore/api/windows,visualstudiocode,dotenv,jupyternotebooks
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
