--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ ipython_config.py
 !.vscode/launch.json
 !.vscode/extensions.json
 !.vscode/*.code-snippets
+!.vscode/*.code-workspace
 
 # Local History for Visual Studio Code
 .history/
@@ -39,8 +40,7 @@ ipython_config.py
 .ionide
 
 ### Datasets ###
-.dataset/*
+dataset/*
 # End of https://www.toptal.com/developers/gitignore/api/windows,visualstudiocode,dotenv,jupyternotebooks
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
-
